got the forecast icons and temps aligned, fixed the current conditions icon.Need to align forecast header and adjust hi/lo temps.

--- a/css/style.css
+++ b/css/style.css
@@ -58,4 +58,6 @@ button {
     background-color: rgba(100,100,100,0.7);
     width: 100px;
     height: 100px;
+    /*justify-content: center;*/
+    align-items: center;
 }
